...
        android:textColor="#D3E2F2"
        app:layout_constraintTop_toBottomOf="@+id/buttonAttendee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonAdministrator"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#414E6E"
        android:text="@string/administrator"
        android:textColor="#D3E2F2"
...
